chore: remove run-voucher.bat — the last wrapper, and it was dead too
Requested, completing the set. Like run-adjustment.sh before it, this one could
never have worked: it invoked inspecto\config\voucher\voucher_unknown_pipeline.toon,
which does not exist. Three of the four wrappers were stale — and the README
compounded it by documenting the .bat as running a DIFFERENT config
(spaces/ucc/.../voucher_pipeline.toon) than the file actually named.

The removal exposed a reference the previous pass missed: MainApp's --help
advertised all four scripts under "ETL pipeline", so the shipped CLI was pointing
operators at commands that had either just been deleted or could only fail. It
now prints the direct java -jar form those wrappers wrapped, with a real sample
config.

The README section is rewritten around that direct form and now carries
--enable-native-access=ALL-UNNAMED explicitly — the flag DuckDB's JNI requires,
which the wrappers supplied and which is easy to drop when copying a shorter
line. Losing it is a runtime failure, so it belongs in the documented command.

inspecto-deploy/README.md also references the wrappers but is UNTRACKED build
output, not a source file — it regenerates, so it is deliberately not edited.
Mentions under docs/archived-documents/ stay as history.

Verified: inspecto-engine compiles; no help-text test asserts these lines; both
repo guards green; no live reference to any run-* script remains.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>